# GitHubProjectDataset

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  dates.py
backend/app/db/: init_db.py  session.py
backend/app/jobs/: daily.py  run_daily.py
backend/app/models/: __init__.py  analysis.py  auth.py  category.py  collection.py  repo.py  score.py  snapshot.py
backend/app/schemas/: repo.py
backend/app/services/: ai_analyzer.py  auth.py  collection_log.py  collector.py  db_lock.py  github_client.py  job_status.py  repo_mapper.py  scoring.py
backend/tests/: test_collector.py  test_dates.py
front/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  prototype-awesome.html  vite.config.js  vite.config.ts
front/src/: App.tsx  api.ts  styles.css
