[project]
name = "github-project-dataset"
version = "0.1.0"
description = "Daily GitHub project radar for hot, rising, and momentum repositories."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "cryptography>=42.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
